# IMPULS_2026

./: .gitignore  README.md
Sources/: File_Manager.h  Poisson_Model.cpp  Poisson_Model.h  Traffic_Model.cpp  Uniform_Model.cpp  Uniform_Model.h
Task_1(Traffic_Models)/: CMakeLists.txt  bash
Task_1(Traffic_Models)/Examples/: .~lock.1000_Uniform_1_1000.csv#  1000_Poisson_100_1000  1000_Poisson_100_1000.csv  1000_Uniform_1_1000  1500_Poisson_150_1500  1500_Poisson_150_1500.csv  800_Uniform_0.001_1000  800_Uniform_0.01_1000
Task_1(Traffic_Models)/Sources/: File_Manager.cpp  File_Manager.h  Uniform_Model.cpp  main.cpp
Task_1(Traffic_Models)/cpp/: Poisson_Model.cpp  Traffic_Model.h
Task_1(Traffic_Models)/python/: Analysis.py
Task_2(QAM)/: CMakeLists.txt  bash
Task_2(QAM)/CSV/: ber_variance_16.csv  ber_variance_4.csv  ber_variance_64.csv
Task_2(QAM)/cpp/: Generator.cpp  Generator.h  Noise.cpp  Noise.h  QAM_Demodulator.cpp  QAM_Demodulator.h  QAM_Modulator.cpp  QAM_Modulator.h  main.cpp
Task_2(QAM)/python/: QAM_Analysis.py
